@@ -50,6 +50,7 @@ s3service.stream-retry-buffer-size=131072
 
 #s3service.ignore-exceptions-in-multi=false
 
+#s3service.enable-storage-classes=true
 #s3service.defaultStorageClass=STANDARD
 
 
